[gd_scene load_steps=45 format=3 uid="uid://c6mxm7u3f5n4g"]

[ext_resource type="Script" uid="uid://b2bi0dloqd2xs" path="res://Code/Humanoids/Controllers/Controller.gd" id="1_uwpdh"]
[ext_resource type="AudioStream" uid="uid://xljtqhwduorn" path="res://Sound/weapons/punch1.ogg" id="2_6kg4y"]
[ext_resource type="Script" uid="uid://chnw437ejhnj4" path="res://Code/Humanoids/Systems/CameraSystem.gd" id="2_8mbkt"]
[ext_resource type="PackedScene" uid="uid://dnrsljtlvb77j" path="res://Scenes/UI/Player/PlayerUI.tscn" id="2_s6v5g"]
[ext_resource type="PackedScene" uid="uid://duso7e10esk50" path="res://Scenes/Sprites/human_sprite_system.tscn" id="3_lq0mj"]
[ext_resource type="Script" uid="uid://by1xcc5dbrila" path="res://Code/Humanoids/Controllers/InputController.gd" id="3_lyye4"]
[ext_resource type="AudioStream" uid="uid://d2lkry7prnx7s" path="res://Sound/effects/gibbed.ogg" id="3_yoeyc"]
[ext_resource type="Script" uid="uid://djrs5msigc2l0" path="res://Code/Humanoids/Systems/InventorySystem.gd" id="4_8gj18"]
[ext_resource type="Texture2D" uid="uid://d1wjahb2n7uqs" path="res://Assets/Effects/FX/Gib.tres" id="4_vqrbj"]
[ext_resource type="Script" uid="uid://dj4qyr2yg1rim" path="res://Code/Humanoids/Controllers/HealthConnector.gd" id="5_ntngp"]
[ext_resource type="Script" uid="uid://dh2tm0dwjxdiw" path="res://Code/Humanoids/Systems/HealthSystem.gd" id="6_nypa4"]
[ext_resource type="Script" uid="uid://ctk7b455p47ul" path="res://Code/OnClick/ClickComponent.gd" id="6_sjx5i"]
[ext_resource type="Script" uid="uid://dbg635erwfw8b" path="res://Code/Humanoids/Components/VisionComponent.gd" id="7_nypa4"]
[ext_resource type="Script" uid="uid://byp73f8op172y" path="res://Code/Humanoids/Systems/ReagentSystem.gd" id="10_o264j"]
[ext_resource type="Script" uid="uid://co3fb4yan7sep" path="res://Code/Humanoids/Components/WeaponHandlingComponent.gd" id="15_ntngp"]
[ext_resource type="Script" uid="uid://cl82bkxuc28j" path="res://Code/Humanoids/Components/MovementComponent.gd" id="16_gwepp"]
[ext_resource type="Script" uid="uid://bbv4x26754up" path="res://Code/Humanoids/Components/ZLevelMovementComponent.gd" id="17_o264j"]
[ext_resource type="Script" uid="uid://ca4n5hj0ijsn6" path="res://Code/Humanoids/Components/InteractionComponent.gd" id="17_sjx5i"]
[ext_resource type="Script" uid="uid://c3u73hjth48ct" path="res://Code/Humanoids/Components/ItemInteractionComponent.gd" id="18_3dn6y"]
[ext_resource type="Script" uid="uid://ceqlv6f14jwgs" path="res://Code/Humanoids/Components/StatusEffectComponent.gd" id="19_vb0nj"]
[ext_resource type="Script" uid="uid://dahxqtbwo8bw7" path="res://Code/Humanoids/Components/BodyTargetingComponent.gd" id="20_38qpi"]
[ext_resource type="Script" uid="uid://57gv3jq6b82j" path="res://Code/Humanoids/Components/GrabPullComponent.gd" id="21_3u27n"]
[ext_resource type="Script" uid="uid://crcieeppmdsku" path="res://Code/Humanoids/Components/PostureComponent.gd" id="22_3dn6y"]
[ext_resource type="Script" uid="uid://c0gd3pjre5rg0" path="res://Code/Humanoids/Components/SkillComponent.gd" id="23_3dn6y"]
[ext_resource type="Script" uid="uid://bu4qlco8mbb3m" path="res://Code/Humanoids/Components/IntentComponent.gd" id="23_vb0nj"]
[ext_resource type="Script" uid="uid://dilpklot1quje" path="res://Code/Helpers/SensorySystem.gd" id="24_38qpi"]
[ext_resource type="Texture2D" uid="uid://b0tfvqv883853" path="res://Assets/Effects/Light/light_224.png" id="24_vb0nj"]
[ext_resource type="Script" uid="uid://b1jm4ncthdjdq" path="res://Code/Humanoids/Components/DoAfterComponent.gd" id="25_gb7n1"]
[ext_resource type="Texture2D" uid="uid://cqglc2mfqbup1" path="res://Assets/Effects/DoAfter/Do_after_Tinker.png" id="26_l4g0b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kqdsm"]
atlas = ExtResource("4_vqrbj")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwepp"]
atlas = ExtResource("4_vqrbj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjx5i"]
atlas = ExtResource("4_vqrbj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntngp"]
atlas = ExtResource("4_vqrbj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nypa4"]
atlas = ExtResource("4_vqrbj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o264j"]
atlas = ExtResource("4_vqrbj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dn6y"]
atlas = ExtResource("4_vqrbj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb0nj"]
atlas = ExtResource("4_vqrbj")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_38qpi"]
atlas = ExtResource("4_vqrbj")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u27n"]
atlas = ExtResource("4_vqrbj")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kg4y"]
atlas = ExtResource("4_vqrbj")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoeyc"]
atlas = ExtResource("4_vqrbj")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb7n1"]
atlas = ExtResource("4_vqrbj")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4g0b"]
atlas = ExtResource("4_vqrbj")
region = Rect2(384, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sq5fq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqdsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwepp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjx5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntngp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nypa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o264j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dn6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb0nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38qpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u27n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kg4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoeyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb7n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4g0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqdsm")
}],
"loop": false,
"name": &"Gib",
"speed": 15.0
}]

[node name="GridMovementController" type="Node2D" groups=["player_controller"]]
script = ExtResource("1_uwpdh")
entity_type = "mob"
hit_sound = ExtResource("2_6kg4y")
destroy_sound = ExtResource("3_yoeyc")

[node name="PlayerUI" parent="." instance=ExtResource("2_s6v5g")]
layer = 128

[node name="HumanSpriteSystem" parent="." instance=ExtResource("3_lq0mj")]
sprite_frames_horizontal = null
sprite_frames_vertical = null
sprite_frame_width = null
sprite_frame_height = null
auto_initialize_on_ready = null
thrust_animation_duration = null
thrust_return_duration = null
thrust_distance = null
lying_offset = null
sync_direction_changes = null
_sync_lying_state = null
sync_customization = null
debug_sprite_updates = null
log_texture_loading = null

[node name="Camera2D" type="Camera2D" parent="." groups=["PlayerCamera"]]
zoom = Vector2(2, 2)
process_callback = 0
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
editor_draw_limits = true
script = ExtResource("2_8mbkt")
target_path = NodePath("..")
camera_easing = 2
camera_transition = 0
default_zoom = Vector2(2.5, 2.5)

[node name="Effect" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sq5fq")
animation = &"Gib"
frame = 14
frame_progress = 1.0

[node name="ClickComponent" type="Node" parent="."]
script = ExtResource("6_sjx5i")
double_click_time = 0.5
click_cooldown = 0.5
metadata/_custom_type_script = "uid://ctk7b455p47ul"

[node name="VisionComponent" type="Node" parent="."]
script = ExtResource("7_nypa4")
vision_radius = 10
vision_blocked_by_doors = true
metadata/_custom_type_script = "uid://dbg635erwfw8b"

[node name="HealthConnector" type="Node" parent="."]
script = ExtResource("5_ntngp")
metadata/_custom_type_script = "uid://dj4qyr2yg1rim"

[node name="HealthSystem" type="Node" parent="." groups=["health_system"]]
script = ExtResource("6_nypa4")
metadata/_custom_type_script = "uid://dh2tm0dwjxdiw"

[node name="ReagentSystem" type="Node" parent="."]
script = ExtResource("10_o264j")
metadata/_custom_type_script = "uid://byp73f8op172y"

[node name="InputController" type="Node" parent="."]
script = ExtResource("3_lyye4")
metadata/_custom_type_script = "uid://by1xcc5dbrila"

[node name="InventorySystem" type="Node" parent="."]
script = ExtResource("4_8gj18")
metadata/_custom_type_script = "uid://djrs5msigc2l0"

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("16_gwepp")
metadata/_custom_type_script = "uid://cl82bkxuc28j"

[node name="ZLevelMovementComponent" type="Node" parent="."]
script = ExtResource("17_o264j")
metadata/_custom_type_script = "uid://bbv4x26754up"

[node name="InteractionComponent" type="Node" parent="."]
script = ExtResource("17_sjx5i")
interaction_cooldown = 0.5
examine_sound = "paper_pickup"
disarm_sound = "punchmiss"
metadata/_custom_type_script = "uid://ca4n5hj0ijsn6"

[node name="ItemInteractionComponent" type="Node" parent="."]
script = ExtResource("18_3dn6y")
arc_height_multiplier = 0.0
max_arc_height = 0.0
metadata/_custom_type_script = "uid://c3u73hjth48ct"

[node name="WeaponHandlingComponent" type="Node" parent="."]
script = ExtResource("15_ntngp")
wield_sound = "gunrustle1"
empty_sound = "gunrustle2"
chamber_sound = "Cocking"
metadata/_custom_type_script = "uid://co3fb4yan7sep"

[node name="StatusEffectComponent" type="Node" parent="."]
script = ExtResource("19_vb0nj")
metadata/_custom_type_script = "uid://ceqlv6f14jwgs"

[node name="BodyTargetingComponent" type="Node" parent="."]
script = ExtResource("20_38qpi")
highlight_targeted_zones = false
metadata/_custom_type_script = "uid://dahxqtbwo8bw7"

[node name="GrabPullComponent" type="Node" parent="."]
script = ExtResource("21_3u27n")
grab_sound = "thudswoosh"
tighten_sound = "thudswoosh"
choke_sound = "thudswoosh"
release_sound = "thudswoosh"
metadata/_custom_type_script = "uid://57gv3jq6b82j"

[node name="PostureComponent" type="Node" parent="."]
script = ExtResource("22_3dn6y")
body_fall_sound = "bump"
rustle_sound = "clothingrustle2"
metadata/_custom_type_script = "uid://crcieeppmdsku"

[node name="IntentComponent" type="Node" parent="."]
script = ExtResource("23_vb0nj")
metadata/_custom_type_script = "uid://bu4qlco8mbb3m"

[node name="DoAfterComponent" type="Node" parent="."]
script = ExtResource("25_gb7n1")
default_spritesheet = ExtResource("26_l4g0b")
default_frame_count = 20
animation_fps = 15.0
indicator_offset = Vector2(0, 0)
allow_facing_changes = true
metadata/_custom_type_script = "uid://b1jm4ncthdjdq"

[node name="SkillComponent" type="Node" parent="."]
script = ExtResource("23_3dn6y")
skillset_name = "marine"
metadata/_custom_type_script = "uid://c0gd3pjre5rg0"

[node name="SensorySystem" type="Node2D" parent="."]
script = ExtResource("24_38qpi")
metadata/_custom_type_script = "uid://dilpklot1quje"

[node name="AmbientLight" type="PointLight2D" parent="."]
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 5.0
texture = ExtResource("24_vb0nj")
metadata/use_color_temperature = true
metadata/color_temperature = 6500
metadata/color_filter = Color(1, 1, 1, 0)
